@@ -637,3 +637,4 @@
 	- "called within reset scope by" errors did not include stderr
 	- added hard-coded "runtime error:" reporting for now (only generated by UndefinedBehaviorSanitizer)
 	- added tagmap report (report_type 3)
+	- added speed report (report_type 4)
